# experience-gifts

./: .gitignore  PROMPT-AI-CODER.md  README-AI.md  README.md  index.html  package-lock.json  package.json  todo-sync-setup.md  vercel.json  vite.config.js
.beads/: issues.jsonl
api/: test.js
api/booklet/: [id].js  create.js
api/signal/: [code].js  create.js
public/: manifest.json  sw.js
signaling/: fly.toml  main.py  pyproject.toml
src/: App.jsx  index.css  main.jsx
src/components/: Games.jsx
src/utils/: beeWordList.js  cloudSync.js  couponActions.js  peerConnection.js  wordList.js
