[project]
name = "experience-gifts-signal"
version = "1.0.0"
description = "WebRTC signaling server for Experience Gifts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
